# hermes-todoist

./: .gitignore  MANIFEST.in  README.md  plugin.yaml  pyproject.toml
.github/workflows/: todoist-e2e.yml
docs/: official-mcp-hermes.md
hermes_todoist/: __init__.py  cli.py  client.py  mcp_server.py  schemas.py  tools.py
skills/todoist/: SKILL.md
skills/todoist-official-mcp/: SKILL.md
tests/: test_client.py  test_plugin_registration.py  test_tools.py
tests/e2e/: __init__.py  test_todoist_live.py
